--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<script>
 	window.onload = function() {
     // similar behavior as clicking on a link
-    window.location.href = "https://melizios.github.io/candrabalnus/index.php";
+    window.location.href = "https://melizios.github.io/candrabalnus/index.php/";
 	}	</script>
 </head>
 <body>
